--- a/example/package.json
+++ b/example/package.json
@@ -11,13 +11,12 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@ontech7/expo-dialog": "file:../",
-    "@gorhom/portal": "^1.0.14",
+    "@ontech7/react-native-dialog": "file:../",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.20",
-    "expo-blur": "^14.1.5",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
