--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@ontech7/expo-dialog",
-  "version": "1.0.0",
-  "description": "Dialog component for Expo SDK (React Native), structure similar to shadcn/ui. Compatible with Android & iOS.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "name": "@ontech7/react-native-dialog",
+  "version": "1.1.0",
+  "description": "Dialog component for React Native, structure similar to shadcn/ui. Compatible with Android & iOS.",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "files": [
-    "dist"
+    "build"
   ],
   "scripts": {
     "build": "tsc"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ontech7/expo-dialog.git"
+    "url": "https://github.com/ontech7/react-native-dialog.git"
   },
   "keywords": [
     "react",
@@ -27,27 +27,19 @@
   "author": "Andrea Losavio (github.com/ontech7)",
   "license": "BSD-3-Clause",
   "peerDependencies": {
-    "@gorhom/portal": ">=1.0.14",
-    "expo": "*",
-    "expo-blur": ">=14.0.0",
     "react": "*",
-    "react-native": "*",
-    "react-native-reanimated": ">=3.0.0"
+    "react-native": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@gorhom/portal": "^1.0.14",
     "@types/react": "~19.0.10",
-    "expo": "~53.0.20",
-    "expo-blur": "^14.1.5",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-reanimated": "~3.17.4",
     "typescript": "~5.8.3"
   },
-  "homepage": "https://github.com/ontech7/expo-dialog",
+  "homepage": "https://github.com/ontech7/react-native-dialog",
   "bugs": {
-    "url": "https://github.com/ontech7/expo-dialog/issues"
+    "url": "https://github.com/ontech7/react-native-dialog/issues"
   },
   "readmeFilename": "README.md",
   "packageManager": "yarn@1.22.22"
